--- a/underbar/style5.css
+++ b/underbar/style5.css
@@ -1,1 +1,1 @@
-nav a{text-decoration:none;color:#000;margin:2em}nav:first-child{display:flex;justify-content:center}nav:nth-child(2){display:flex;flex-direction:column;align-items:center}
+nav a{text-decoration:none;color:#000;margin:2em}nav:first-child{display:flex;justify-content:center}nav:nth-child(2){display:flex;flex-direction:column;align-items:center}#horizontal-underline{position:absolute;background-color:pink;width:0;top:0;left:0;height:4px;transition:.5s}#vertical-underline{position:absolute;background-color:#add8e6;width:0;top:0;left:0;height:4px;transition:.5s}
