--- a/underbar/style7.scss
+++ b/underbar/style7.scss
@@ -14,3 +14,23 @@ nav:nth-child(2) {
   flex-direction: column;
   align-items: center;
 }
+
+#horizontal-underline {
+  position: absolute;
+  background-color: pink;
+  top: 0;
+  left: 0;
+  height: 4px;
+  width: 0;
+  transition: 0.5s;
+}
+
+#vertical-underline {
+  position: absolute;
+  background-color: lightblue;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 4px;
+  transition: 0.5s;
+}
