--- a/portfolio/portfolio_k/style.scss
+++ b/portfolio/portfolio_k/style.scss
@@ -175,7 +175,8 @@
       width: 100%;
       height: 100%;
       img {
-        width: 580px;
+        width: 50%;
+        height: 70%;
         position: absolute;
         right: 0;
         padding-top: 70px;
@@ -410,3 +411,53 @@ footer {
     align-items: center;
     gap: 0;
     padding: 10px;
+    .introImg {
+      display: flex;
+      justify-content: center;
+      img {
+        height: 30vh;
+      }
+    }
+  }
+  .symbol {
+    display: none;
+  }
+  .new {
+    font-size: 0.7em;
+    .newTitle {
+      height: 10%;
+    }
+    .newSubs {
+      flex-direction: column;
+      height: 70%;
+      .newSubsBoxes {
+        .newSubsBox {
+          gap: 10px;
+          .newSubsBox1 {
+            gap: 10px;
+          }
+          .newSubsBox2 {
+            gap: 10px;
+          }
+        }
+      }
+      .newSubsImg {
+        img {
+          width: 100%;
+          height: 50vh;
+          padding: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .main {
+    .intro {
+      font-size: 0.5em;
+      height: 20vh;
+      top: 15%;
+    }
+  }
+}
