--- a/portfolio/portfolio_k/style.scss
+++ b/portfolio/portfolio_k/style.scss
@@ -409,6 +409,21 @@ footer {
       }
     }
   }
+  .description {
+    height: 70vh;
+    display: flex;
+    flex-direction: column-reverse;
+    font-size: 0.7em;
+    .descriptionMain {
+      align-items: center;
+      justify-content: center;
+      padding: 30px;
+      gap: 20px;
+      .descriptionMainSubs {
+        gap: 0;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 420px) {
