--- a/portfolio/portfolio_k/style.scss
+++ b/portfolio/portfolio_k/style.scss
@@ -255,20 +255,6 @@
   border: 1px solid #f00;
 }
 
-.market {
-  width: 100%;
-  height: 60vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 130px;
-  div {
-    width: 400px;
-    height: 500px;
-    background: #f7f3f0;
-  }
-}
-
 .follow {
   width: 100%;
   height: 30vh;
@@ -421,6 +407,18 @@ footer {
       gap: 20px;
       .descriptionMainSubs {
         gap: 0;
+      }
+    }
+  }
+  footer {
+    padding: 20px;
+    .footerEmail {
+      width: 100%;
+      input {
+        width: 60%;
+      }
+      button {
+        width: 37%;
       }
     }
   }
